--- a/hvfrontend/src/App.css
+++ b/hvfrontend/src/App.css
@@ -177,7 +177,7 @@ Light Gray: #E6E6E3*/
 }
 
 .header-photo-trails {
-  background-image: url('assets/bg-trails.jpg');
+  /* background-image: url('assets/bg-trails.jpg'); */
   background-position: 25% 38%;
   background-size: cover;
   margin-bottom: 4%;
@@ -431,7 +431,7 @@ hr {
   font-weight: bold;
   padding-bottom: 3%;
   padding-top: 2%;
-  padding-left: 5%;
+  padding-left: 3%;
   text-align: left;
 }
 
@@ -463,7 +463,7 @@ hr {
   font-weight: bold;
   padding-bottom: 3%;
   padding-top: 2%;
-  padding-left: 5%;
+  padding-left: 3%;
   text-align: left;
 }
 
