--- a/hvfrontend/src/App.css
+++ b/hvfrontend/src/App.css
@@ -410,7 +410,7 @@ hr {
 }
 
 .header-photo-saved {
-  background-image: url('assets/bg-saved.jpg');
+  /* background-image: url('assets/bg-saved.jpg'); */
   background-position: 25% 35%;
   background-size: cover;
   margin-bottom: 4%;
@@ -498,6 +498,12 @@ hr {
 
 textarea {
   height: 20vh;
+}
+
+.admin-form-photo {
+  min-height: 35vh;
+  text-align: center;
+  width: 100%;
 }
 
 /* Navigation */
