--- a/hvfrontend/src/App.css
+++ b/hvfrontend/src/App.css
@@ -182,7 +182,7 @@ Light Gray: #E6E6E3*/
   background-size: cover;
   margin-bottom: 4%;
   min-height: 35vh;
-  padding-top: 2%;
+  padding-top: 0%;
   padding-left: 5%;
   font-weight: bold;
 }
@@ -257,7 +257,7 @@ Light Gray: #E6E6E3*/
   background-position: 25% 45%;
   background-size: cover;
   min-height: 35vh;
-  padding-top: 2%;
+  padding-top: 0%;
   padding-left: 5%;
   font-weight: bold;
 }
@@ -265,6 +265,7 @@ Light Gray: #E6E6E3*/
 .header-text-trails-detail {
   font-weight: bold;
   padding-bottom: 1.5%;
+  padding-top: 2%;
 }
 
 .h3-text-trails-detail {
@@ -541,19 +542,29 @@ textarea {
 }
 
 .navbar {
-    padding: 0 0 4.5rem;
+  padding: 1rem;
 }
 
 .navbar-brand {
-  width: 350px;
+  width: 300px;
 }
 
 .nav-item {
-    padding: 0 10px;
+  padding: 0 10px;
 }
 
 .nav-link {
-    font-size: 1.2rem;
+  font-size: 1.2rem;
+}
+
+.nav-item-other {
+  color: white;
+  padding-top: 5px;
+  margin-right: 15px;
+}
+
+.nav-link-other {
+  font-size: 1.2rem;
 }
 
 .dropdown-toggle::after {
