--- a/hvfrontend/src/App.css
+++ b/hvfrontend/src/App.css
@@ -466,7 +466,7 @@ hr {
   text-align: left;
 }
 
-/* Account Pages */
+/* Admin Pages */
 #admin-page {
   background-image: url('assets/topography-tan.svg');
   background-color: #78938A;
