--- a/hvfrontend/src/App.css
+++ b/hvfrontend/src/App.css
@@ -17,6 +17,10 @@ Light Gray: #E6E6E3
     src: url(assets/fonts/Martel-Regular.ttf);
 }
 
+.container {
+  padding: 1rem;
+}
+
 .App {
   background-color: #525E75;
   color: white;
@@ -103,13 +107,12 @@ Light Gray: #E6E6E3
   margin-left: auto;
   margin-right: auto;
   margin-top: 10%;
-  
 }
 
 .about-image {
   height: 100%;
   width: auto;
-  object-position: -25px;
+  object-position: -8px;
 }
 
 .about-box {
@@ -201,6 +204,7 @@ Light Gray: #E6E6E3
   margin-bottom: 25px;
   min-height: 45vh;
   padding: 7px;
+  overflow: hidden;
 }
 
 .trail-image {
@@ -247,6 +251,7 @@ Light Gray: #E6E6E3
 .filter-form {
   margin-top: -20px;
   margin-bottom: 25px;
+  padding: 0 !important;
 }
 
 /* Trails Details Page */
@@ -467,6 +472,8 @@ hr {
 .account-history-text {
   font-family: Martel;
   text-align: left;
+  padding-left: 1rem !important;
+  writing-mode: vertical-rl;
 }
 
 .account-button {
@@ -623,7 +630,7 @@ textarea {
 }
 
 .navbar-brand {
-  width: 300px;
+  width: 290px;
 }
 
 .nav-item {
@@ -698,4 +705,49 @@ textarea {
 
 .github-icon {
   fill: #010101;
+}
+
+/* Small Screens */
+@media (max-width: 650px) {
+  .landing-box {
+    margin-top: 30%;
+    padding: 40px;
+  }
+
+  .auth-button {
+    width: 50%;
+    margin: 5%;
+  }
+
+  .login-register-header {
+    padding-top: 10%;
+  }
+
+  .header-text-trails-detail {
+    padding-top: 4%;
+  }
+
+  .filter-form {
+    padding-left: 1rem !important;
+    padding-right: 1rem !important;
+  }
+
+  .admin-button {
+    width: 50%;
+    margin: 5%;
+  }
+}
+
+/* Medium Screens */
+@media (max-width: 1000px) {
+  .landing-box {
+    margin-top: 30%;
+    padding: 30px;
+  }
+
+  .account-history-text {
+    font-family: Martel;
+    text-align: left;
+    writing-mode: inherit;
+  }
 }
